2008-05-27  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors.8.pre.in: Fix typo.
	
2008-05-27  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_3.

2008-05-27  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru-multirecord-area.c
	(output_management_access_record): Fix output corner case.
	
2008-05-27  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru-util.c
	(ipmi_fru_output_type_length_field): Fix output corner case.

2008-05-24  Albert Chu <chu11@llnl.gov>

	* common/doc/: Document Sun Fire X4150 and X4450 workarounds.
	
2008-05-23  Albert Chu <chu11@llnl.gov>

        * common/doc/manpage-common-workaround-heading-text.man: Tweak
        description.

2008-05-21  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi.7.pre.in: Fix typo.

	* ipmiconsole/ipmiconsole.conf.5.pre.in: Fix typo.

	* ipmipower/ipmipower.conf.5.pre.in: Fix typos.
	
 	* common/doc/manpage-common-ignore-sdr-cache.man: Fix option
 	description typo.
 
 	* common/src/tool-sdr-cache-common.c (sdr_cache_flush_cache),
 	ipmimonitoring/, ipmi-fru/, ipmi-sel/, ipmi-sensors/,
 	ipmi-sensors-config/: Fix --quiet-cache to work with flush option.

2008-05-20  Albert Chu <chu11@llnl.gov>
  
 	* ipmi-sensors-config/src/ipmi-sensors-config.c
 	(_ipmi_sensors_config): Fix flush corner case.
	
 	* ipmi-sensors-config/ipmi-sensors-config.8.pre.in: Add forgotten
 	manpage sdr options.

2008-05-16  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/: Fix --eliminate option.
	
2008-05-16  Albert Chu <chu11@llnl.gov>
	
	* ipmipower/ipmipower.8.pre.in: Clarify some text.

2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-outofband-timeout.man: Fix text.

	* ipmipower/ipmipower.8.pre.in: Fix english.
	
2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/src/tool-cmdline-common.c (parse_workaround_flags): Fix
	parsing bug.
	
2008-05-15  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_2.
