@@ -1,3 +1,8 @@
+2008-05-29  Albert Chu <chu11@llnl.gov>
+  
+ 	* libfreeipmi/src/api/ipmi-api.c (ipmi_ctx_open_inband): Fix
+ 	driver device corner case.
+	
 2008-05-27  Albert Chu <chu11@llnl.gov>
 
 	* ipmi-sensors/ipmi-sensors.8.pre.in: Fix typo.
